--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
   "name": "yuga_roadmap",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "server/server.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon server.js",
-    "start": "nodemon server.js"
+    "dev": "nodemon server/server.js",
+    "start": "nodemon server/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.5.2",
