--- a/package.json
+++ b/package.json
@@ -2,16 +2,22 @@
   "name": "yuga_roadmap",
   "version": "1.0.0",
   "description": "",
-  "main": "server/server.js",
+  "main": "index.html",
   "type": "module",
   "scripts": {
-    "dev": "nodemon server/server.js",
-    "start": "nodemon server/server.js"
+    "dev": "bun --watch src/server.js",
+    "build": "bun build src/server.js",
+    "start": "NODE_ENV=production bun src/server.js",
+    "test": "bun test"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@elysiajs/html": "^0.8.0",
+    "@elysiajs/static": "^0.8.1",
+    "bun-types": "^1.0.29",
+    "elysia": "^0.8.17",
     "express": "^4.18.2",
     "typescript": "^5.3.3"
   },
