--- a/package.json
+++ b/package.json
@@ -5,24 +5,22 @@
   "main": "index.html",
   "type": "module",
   "scripts": {
-    "dev": "bun --watch src/server.js",
-    "build": "bun build src/server.js",
-    "start": "NODE_ENV=production bun src/server.js",
+    "dev": "bun --watch ./src/server.js",
+    "build": "bun build ./src/server.js --target bun",
+    "start": "NODE_ENV=production bun ./src/server.js",
     "test": "bun test"
   },
   "keywords": [],
-  "author": "",
+  "author": "nftsasha",
   "license": "ISC",
   "dependencies": {
     "@elysiajs/html": "^0.8.0",
     "@elysiajs/static": "^0.8.1",
     "bun-types": "^1.0.29",
     "elysia": "^0.8.17",
-    "express": "^4.18.2",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@flydotio/dockerfile": "^0.5.2",
-    "nodemon": "^3.1.0"
+    "@flydotio/dockerfile": "^0.5.2"
   }
 }
